--- a/_config.yaml
+++ b/_config.yaml
@@ -11,7 +11,7 @@ baseurl: ""
 # site social media and other links
 links:
   email: jane.smith@your-lab.com
-  google-scholar: https://scholar.google.com/citations?user=2f8xa-oAAAAJ&hl=en&oi=ao
+  google-scholar: https://scholar.google.com/citations?hl=en&user=2f8xa-oAAAAJ
   github: your-lab
   twitter: YourLabHandle
   instagram: YourLabHandle
