--- a/_config.yaml
+++ b/_config.yaml
@@ -10,7 +10,7 @@ baseurl: ""
 
 # site social media and other links
 links:
-  email: jane.smith@your-lab.com
+  email: gdenis@bu.edu
   google-scholar: https://scholar.google.com/citations?hl=en&user=2f8xa-oAAAAJ
   github: your-lab
   twitter: YourLabHandle
