--- a/_config.yaml
+++ b/_config.yaml
@@ -2,6 +2,7 @@
 
 # site properties and page defaults
 title: Denis Lab
+subtitle: Hematology and Oncology
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/logo.svg
 header: images/background.jpg
