--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -31,3 +31,5 @@
     - type: source
       link: https://github.com/greenelab/scihub
       text: Analyses source
+-id:doi:10.1101/2022.02.01.478722
+  image: https://www.biorxiv.org/content/biorxiv/early/2022/10/19/2022.02.01.478722/F1.large.jpg
