--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -47,3 +47,5 @@
 - id: doi:10.1111/j.1600-065X.2012.01142.x
   image: https://onlinelibrary.wiley.com/cms/asset/30ee671a-63d8-4cb8-8c71-403611ee8ce8/imr1142_f2.gif
 
+- id: pmc:PMC3025494
+
