--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -60,4 +60,10 @@
 - id: doi:10.1007/978-3-319-06103-0_5
   image: https://link.springer.com/chapter/10.1007/978-3-319-06103-0_5/figures/3
   
+- id: doi:10.1097/01.med.0000433058.78485.b3
 
+- id: doi:10.1016/B978-0-12-407766-9.00003-1
+
+- id: doi:10.2741/a668
+
+- id: doi:10.2741/denis
