--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -117,7 +117,7 @@
     - Brd2
     - Type 2 Diabetes
 
-- id: 
+- id: doi:10.2741/a668
 # Bromodomain motifs and "scaffolding"?
 
 - id: doi:10.2741/denis
