--- a/_config.yaml
+++ b/_config.yaml
@@ -4,7 +4,7 @@
 title: Denis Lab
 subtitle: Hematology and Oncology
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
-logo: images/logo.svg
+logo: images/BU Plate.svg
 header: images/background.jpg
 footer: images/background.jpg
 baseurl: ""
