--- a/_config.yaml
+++ b/_config.yaml
@@ -5,8 +5,8 @@ title: Denis Lab
 subtitle: Hematology and Oncology
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/BU Plate.svg
-header: images/Lab Site Background.jpg
-footer: images/Lab Site Background.jpg
+header: images/Lab Site.jpg
+footer: images/Lab Site.jpg
 baseurl: ""
 
 # site social media and other links
