--- a/_config.yaml
+++ b/_config.yaml
@@ -4,9 +4,9 @@
 title: Denis Lab
 subtitle: Hematology and Oncology
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
-logo: images/BU Plate.svg
-header: images/Lab Site.jpg
-footer: images/Lab Site.jpg
+logo: images/site_wide/BU Plate.svg
+header: images/site_wide/Lab Site.jpg
+footer: images/site_wide/Lab Site.jpg
 baseurl: ""
 
 # site social media and other links
