--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 
 # site properties and page defaults
 title: Denis Lab
-subtitle: Hematology and Oncology
+subtitle: Hematology and Medical Oncology
 description: An easy-to-use, flexible website template for labs, with automatic citations, GitHub tag imports, pre-built components, and more.
 logo: images/site_wide/BU Plate.svg
 header: images/site_wide/Lab Site.jpg
