--- a/_data/roles.yaml
+++ b/_data/roles.yaml
@@ -23,7 +23,7 @@ Lab Technician:
   text: Lab Technician
 
 RA:
-  icon: fas fa-book-open-cover
+  icon: fas fa-flask
   text: Research Associate
   
 masters:
