--- a/_data/roles.yaml
+++ b/_data/roles.yaml
@@ -27,7 +27,7 @@ RA:
   text: Research Associate
   
 masters:
-  icon: <i class="fa-solid fa-glasses-round"></i>
+  icon: fa-solid fa-glasses-round
   text: Masters Student
 
 postdoc:
